--- a/exercises/lukasz_krawczyk_jquery_zad02.html
+++ b/exercises/lukasz_krawczyk_jquery_zad02.html
@@ -21,8 +21,8 @@
 		// Tutaj wpisz swój kod inicjalizacyjny
 
 		$(document).ready(() =>  {
-			$('p').click(() => $('p').hide())
-			$('h1').click(() => $('p').show())
+			$('p').click(() => $('p').slideUp())
+			$('h1').click(() => $('p').slideDown())
 		})
 	</script>
 
