--- a/exercises/lukasz_krawczyk_jquery_zad04a.html
+++ b/exercises/lukasz_krawczyk_jquery_zad04a.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
 
 	<title>Zadanie 4a. Odczyt i modyfikacja atrybutów i właściwości elementów HTML</title>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="Author" content="Łukasz Krawczyk (Web Developer / Graphic &amp; Web Designer)" />
-	
+
 	<style>
-		td img:hover { cursor: pointer; }
+		td img:hover {
+			cursor: pointer;
+		}
 	</style>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	
+
 	<script>
-		// Stwórz taką galerię obrazków, w której kliknięcie miniaturowego obrazka wewnątrz komórki tabeli HTML powoduje wyświetlenie odpowiadającego mu dużego obrazka wewnątrz elementu div położonego poniżej. Zadbaj również o to, by dynamicznie wygenerowany duży obrazek posiadał odpowiadający klikniętej miniaturce tekst alternatywny, tj. atrybut alt. Duże obrazy znajdują się w folderze 400x300, a małe w folderze 100x75. Nazwy plików w obu folderach są identyczne.
+		// Stwórz taką galerię obrazków, w której kliknięcie miniaturowego obrazka wewnątrz komórki tabeli HTML
+		// powoduje wyświetlenie odpowiadającego mu dużego obrazka wewnątrz elementu div położonego poniżej. Zadbaj
+		// również o to, by dynamicznie wygenerowany duży obrazek posiadał odpowiadający klikniętej miniaturce tekst
+		// alternatywny, tj. atrybut alt. Duże obrazy znajdują się w folderze 400x300, a małe w folderze 100x75. Nazwy
+		// plików w obu folderach są identyczne.
 
 		// Nie usuwaj z dokumentu żadnego istniejącego kodu HTML i CSS.
-		
-		$(function() {
-			// Tutaj wpisz swój kod inicjalizacyjny
-		});
+
+		$(function () {
+			$('td img').click(function() {
+				const src = $(this).attr('src').replace('100x75', '400x300')
+				const alt = $(this).attr('alt')
+				$('div img').attr('src', src)
+				$('div img').attr('alt', alt)
+			})
+		})
 	</script>
-	
+
 </head>
+
 <body>
-	
+
 	<table>
 		<tbody>
 			<tr>
@@ -41,6 +54,7 @@
 		</tbody>
 	</table>
 	<div><img src="#" alt="" /></div>
-	
+
 </body>
+
 </html>
