--- a/exercises/lukasz_krawczyk_jquery_zad06a.html
+++ b/exercises/lukasz_krawczyk_jquery_zad06a.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
 
 	<title>Zadanie 6a. Efekty specjalne (animacje)</title>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="Author" content="Łukasz Krawczyk (Web Developer / Graphic &amp; Web Designer)" />
-	
+
 	<style>
 		input[type="button"] { font-size: large; }
 		div { width: 300px; height: 175px; border: 1px solid #ccc; margin-top: 20px; position: absolute; }
 	</style>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	
+
 	<script>
 		// Wykorzystaj metodę .animate() oraz przyciski "W lewo" i "W prawo", żeby otrzymać prostokąt przesuwający się w poziomie o 400px po naciśnięciu odpowiedniego przycisku.
 
 		// Nie usuwaj z dokumentu żadnego istniejącego kodu HTML i CSS.
-		
-		$(function() {
-			// Tutaj wpisz swój kod inicjalizacyjny
+
+		$(function () {
+			$('body input:first-child').click(() => {
+				$('div').animate({left: '-=400'})
+			})
+			$('body input:nth-child(2)').click(() => {
+				$('div').animate({left: '+=400'})
+			})
 		});
 	</script>
-	
+
 </head>
+
 <body>
-	
+
 	<input type="button" value="W lewo" />
 	<input type="button" value="W prawo" />
 	<div></div>
-	
+
 </body>
+
 </html>
